--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "jquery.timer.js",
   "scripts": {
+    "start": "webpack serve",
     "build": "webpack"
   },
   "keywords": [],
