--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "jquery.timer.js",
   "scripts": {
-    "start": "webpack serve",
-    "build": "webpack"
+    "start": "webpack serve --open --mode development",
+    "build": "webpack --mode production"
   },
   "keywords": [],
   "author": "",
@@ -17,11 +17,15 @@
     "@types/node": "^20.14.11",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "autoprefixer": "^10.4.19",
     "babel-loader": "^9.1.3",
     "banner-webpack-plugin": "^0.2.3",
     "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.0",
+    "postcss": "^8.4.39",
+    "postcss-loader": "^8.1.1",
     "style-loader": "^4.0.0",
+    "tailwindcss": "^3.4.6",
     "terser-webpack-plugin": "^5.3.10",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
@@ -31,7 +35,9 @@
     "webpack-dev-server": "^5.0.4"
   },
   "dependencies": {
+    "mini-css-extract-plugin": "^2.9.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "styled-components": "^6.1.12"
   }
 }
